# netflux

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.rs  format.rs  icon.rs  main.rs  net.rs  popup.rs
src/core/: monitor.rs  state.rs
src/sys/: gdi.rs  mod.rs  registry.rs
src/ui/: mod.rs  popup.rs  theme.rs  tray.rs
src/utils/: format.rs
