[package]
name = "netflux"
version = "0.1.0"
edition = "2021"
description = "A lightweight network speed monitor for Windows System Tray"
authors = ["justrawaccel"]
license = "MIT"
repository = "https://github.com/justrawaccel/netflux"
keywords = ["windows", "network", "monitor", "tray", "gdi"]
categories = ["network-programming", "gui"]

[build-dependencies]
winres = "0.1"

[dependencies]
tray-icon = "0.19.0"
winit = "0.29"
crossbeam-channel = "0.5"
once_cell = "1.19"
raw-window-handle = "0.6"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_Security",
]
